Integrated data.gov and google places api calls in the test html website

--- a/public/test.html
+++ b/public/test.html
@@ -28,10 +28,10 @@
           <span class="step--number">1</a>
         </div>
         <div class="pure-u-4-5">
-          <p class="step--info">Post data to local parse server:</p>
+          <p class="step--info"> Fetch data.gov hospital data from cloud code </p>
           <div class="pure-g">
             <div class="pure-u-1-5">
-              <a href="#" id="step-1-btn" class="step--action-btn">Post</a>
+              <a href="#" id="step-1-btn" class="step--action-btn"> Fetch </a>
             </div>
             <div class="pure-u-4-5">
               <!-- <div class="code-label " title="Output">Output</div> -->
@@ -46,7 +46,7 @@
           <span class="step--number">2</a>
         </div>
         <div class="pure-u-4-5">
-          <p class="step--info">Fetch data from local parse server:</p>
+          <p class="step--info">Fetch Google places emercency rooms from cloud code</p>
           <div class="pure-g">
             <div class="pure-u-1-5">
               <a href="#" id="step-2-btn" class="step--action-btn">Fetch</a>
