Integrated data.gov and google places api calls in the test html website

--- a/public/test.html
+++ b/public/test.html
@@ -13,15 +13,14 @@
       </div>
 
       <div class="advice">
-        <p><strong>Hi</strong>! We've prepared a small 3-steps page to assist you testing your local Parse server.</p>
-        <p>These first steps will help you run and test the Parse server locally and were referrenced by the <a href="https://github.com/ParsePlatform/parse-server/wiki/Migrating-an-Existing-Parse-App">migration guide</a> provided by <a href="https://github.com/ParsePlatform/">Parse Platform</a>.</p>
+        <p><strong>Hi</strong>! This web page will help testing the Parse Server for DocWhere</p>
       </div>
 
-      <p class="up-and-running">Looks like our local Parse Serve is running under <span id="parse-url">...</span>. Let’s test it? </p>
+      <p class="up-and-running">Looks like our Parse Serve is running under <span id="parse-url">...</span>. Let’s test it? </p>
 
       <p>We have an express server with Parse server running on top of it connected to a MongoDB.</p>
 
-      <p>The following steps will try to save some data on parse server and then fetch it back. Hey ho?</p>
+      <p>The following steps will try to fetch data from data.gov api and google places api from the cloud code</p>
 
       <div id="step-1" class="pure-g step--container">
         <div class="pure-u-1-5 align-center">
