--- a/public/test.html
+++ b/public/test.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div class="align-center">
-        <img id="parse-logo" src="/public/assets/images/parse-logo.png">
+        <img id="parse-logo" src="/public/assets/images/docwhere-logo.png">
       </div>
 
       <div class="advice">
@@ -18,7 +18,7 @@
 
       <p class="up-and-running">Looks like our Parse Serve is running under <span id="parse-url">...</span>. Let’s test it? </p>
 
-      <p>We have an express server with Parse server running on top of it connected to a MongoDB.</p>
+      <p>We have an express server with Parse server running on top of it connected to a MongoDB and hosted on Heroku.</p>
 
       <p>The following steps will try to fetch data from data.gov api and google places api from the cloud code</p>
 
@@ -80,7 +80,7 @@
         </div>
         <div class="pure-u-4-5">
           <p id="local-parse-working">
-          Congrats! Our local Parse server is working. :)
+          Our Parse server is working. :)
           </p>
         </div>
       </div>
